--- a/sparewall/Gemfile
+++ b/sparewall/Gemfile
@@ -1,4 +1,6 @@
+# A sample Gemfile
 source "https://rubygems.org"
+
 gem "sinatra"
 gem "sinatra-contrib"
 gem "sinatra-activerecord"
@@ -6,5 +8,12 @@ gem "rake"
 gem "thin"
 gem "activerecord"
 gem "pg"
-gem 'tux', '~> 0.3.0'
-gem "pry"
+gem "sass"
+gem "sinatra-assetpack"
+gem "bcrypt"
+gem "sinatra-flash"
+
+group :development do
+  gem 'tux', '~> 0.3.0'
+  gem "pry"
+end
